# balloon_qnet

./: QEuropeFunctions.py  README.md  free_space_losses.py  pyproject.toml
Studies/: AOStudy.py  EntanglementStudy.py  HorizStudy.py  HorizW0Study.py  MDItest.py  RxStudy.py  UplinkStudy.py  W0study.py  untrustedscenararchi1.py  zenithStudy.py
balloon_qnet/: QEuropeFunctions.py  __init__.py  transmittance.py
data/: AOballoonMaxi.txt  AOballoonSimu01.txt  AOballoonSimu02.txt  AOballoonSimu04.txt  AOballoonSimu06.txt  AOballoonSimu10.txt  AOballoonSimu2.txt  AOballoonSimu3.txt  AOballoonSimu4.txt  AOballoonSimu5.txt  AOballoonSimu6.txt  AOballoonSimu7.txt  AOballoonSimu8.txt  AOballoonSimu9.txt  AOballoonSimuv6.txt  AOballoonTheo01.txt  AOballoonTheo011.txt  AOballoonTheo02.txt  AOballoonTheo04.txt  AOballoonTheo06.txt  AOballoonTheo10.txt  AOballoonTheo2.txt  AOballoonTheo3.txt  AOballoonTheo4.txt  AOballoonTheo5.txt  AOballoonTheo6.txt  AOballoonTheo7.txt  AOballoonTheo8.txt  AOballoonTheo9.txt  AOballoonTheov6.txt  HeightballoonSimu01.txt  HeightballoonSimu02.txt  HeightballoonSimu04.txt  HeightballoonSimu06.txt  HeightballoonStudy.txt  HeightballoonTheo.txt  HeightballoonTheo01.txt  HeightballoonTheo04.txt  HeightballoonTheo06.txt  HorizSimu01.txt  (+49 more)
scripts/: ensure_lowtran.py
