[tool.poetry]
name = "balloon_qnet"
version = "0.1.0"
description = "Balloon-based quantum network simulator."
authors = ["Ilektra Karakosta-Amarantidou", "Raja Yehia", "Matteo Schiavon"]
packages = [{ include = "balloon_qnet" }]

[tool.poetry.dependencies]
setuptools = "^78.1.0"
python = ">=3.10.12, <=3.12.3"
numpy = "^2.2.4"
scipy = "^1.15.2"
matplotlib = "^3.10.1"
multiprocess = "^0.70.17"
pandas = "^2.2.3"
meson = "^1.7.2"
ninja = "^1.11.1.4"
netsquid = { version = "*", source = "netsquid" }

[[tool.poetry.source]]
name = "netsquid"
url = "https://pypi.netsquid.org"
secondary = true 

[build-system]
requires = ["poetry-core", "setuptools", "wheel"]
build-backend = "poetry.core.masonry.api"